top and bottom nav bar added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
         <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
     </head>
     <body>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
-        <form action="#" id="body-el">
-            <input type="text">
+        <ul class="nav">
+            <li class="liSide"><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+            <li class="liSide"><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
+            <li class="liSpace"></li>
+            <li class="liSide"><a href="https://mail.google.com/mail/u/0/?ogbl#inbox">Gmail</a></li>
+            <li class="liSide"><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a></li>
+        </ul>
+        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+        <form action="#" id="search">
+            <input type="text" size="50">
         </form>
+        <ul class="nav bttm">
+            <li class="liSide"><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a></li>
+            <li class="liSide"><a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a></li>
+            <li class="liSide"><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
+            <li class="liSpace"></li>
+            <li class="liSide"><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
+            <li class="liSide"><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
+            <li class="liSide"><a href="https://google.com">Setting</a></li>
+        </ul>
     </body>
 </html>
