--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <form action="#" id="search">
             <input type="text" size="50">
         </form>
+        <div class="bttn">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+        </div>
         <ul class="nav bttm">
             <li class="liSide"><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a></li>
             <li class="liSide"><a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=us-en_US-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Business</a></li>
